La til eksempler

--- a/Kapittel 1-2/fet-kursiv.html
+++ b/Kapittel 1-2/fet-kursiv.html
@@ -6,9 +6,9 @@
     </head>
     <body>
         <h1>Klassetur</h1>
-        <h2>Reise til et fiskevann</h2>
+        <h1>Reise til et fiskevann</h1>
         <p>
-            Vi reiser til <b>Hardangervidda</b> på fisketur. Denne reisen vil foregå i tidsrommet <i>01.09.2018</i> til <i>10.09.2018</i>. Ta med fiskestang og god tålmodighet! Det kan bli kaldt, så <b>varme klær</b> er også viktig.
+            Vi reiser til Hardangervidda på fisketur. Denne reisen vil foregå i tidsrommet 01.09.2018 til 10.09.2018. Ta med fiskestang og god tålmodighet! Det kan bli kaldt, så varme klær er også viktig.
         </p>
     </body>
 </html>
