--- a/Kapittel 1-2/dyrenett/kanin.html
+++ b/Kapittel 1-2/dyrenett/kanin.html
@@ -10,6 +10,6 @@
     <a href="kanin.html">Kanin</a>
     <h1>Kanin</h1>
     <img src="bilder/kanin.jpg" alt="Bilde av en kanin">
-    <p>En kanin kan leve i 8–10 år.</p>
+    <p>En kanin kan leve i 8-10 år.</p>
 </body>
 </html>
