La til masse snakz

--- a/Kapittel 1-2/bilder.html
+++ b/Kapittel 1-2/bilder.html
@@ -9,12 +9,7 @@
 </head>
 
 <body>
-	<a href="http://www.pinnsvinhjelpen.no/">
-		<img src="bilder/pinnsvin.jpg">
-		<h1>Pinnsvin</h1>
-	</a>
-
-	<p>På pinnsvinhjelpen.no finner du informasjon om pinnsvin.</p>
+	<img src="../over-mappe.jpg" height="50" title="Firefisle" alt="Firefisle">
 </body>
 
 </html>
