--- a/Kapittel 1-2/lenker.html
+++ b/Kapittel 1-2/lenker.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 </head>
-
 <body>
-	<a href="http://www.pinnsvinhjelpen.no/">
-		<img src="bilder/pinnsvin.jpg">
-		<h1>Pinnsvin</h1>
-	</a>
-
-	<p>På pinnsvinhjelpen.no finner du informasjon om pinnsvin.</p>
+	<h1>Lenker</h1>
+	<ul>
+		<li>
+			<a href="http://www.nrk.no">
+				<img src="bilder/nrk.png" width="50" alt="">
+			</a>
+		</li>
+		<li>
+			<a href="http://www.vg.no">VG</a>
+		</li>
+		<li>
+			<a href="http://www.db.no">Dagbladet</a>
+		</li>
+	</ul>
 </body>
-
 </html>
