--- a/Kapittel 1-2/liste.html
+++ b/Kapittel 1-2/liste.html
@@ -11,8 +11,11 @@
             Vi reiser til <b>Hardangervidda</b> på fisketur. Reisen vil foregå i tidsrommet <i>01.09.2017</i> til <i>10.09.2017</i>. Ta med fiskestang og god tålmodighet! Det kan bli kaldt, så <b>varme klær</b> er også viktig.
         </p>
         <h3>Huskeliste</h3>
-        <ul>
+        <ol>
             <li>Sovepose og liggeunderlag</li>
-        </ul>
+            <li>Matpakke til bussturen</li>
+            <li>Drikkeflaske til vann</li>
+            <li>Fiskestang</li>
+        </ol>
     </body>
 </html>
