--- a/Kapittel 1-2/skitur.html
+++ b/Kapittel 1-2/skitur.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Min sjette nettside</title>
 </head>
+
 <body>
 	<h1>Video fra skituren</h1>
-	<video src=""></video>
+	<video src="video/skitur.mp4"
+	       controls width="400"
+		   poster="bilder/skitur.jpg"></video>
 </body>
+
 </html>
