--- a/Kapittel 1-2/bursdagssang.html
+++ b/Kapittel 1-2/bursdagssang.html
@@ -7,6 +7,6 @@
     <body>
         <h1>Bursdagssang</h1>
         <p>Gratulerer med dagen! Her kan du høre en bursdagssang</p>
-        <audio src="lyd/bursdagssang.mp3"></audio>
+        <audio src="lyd/bursdagssang.mp3" controls loop muted></audio>
     </body>
 </html>
