--- a/Kapittel 1-2/min-første-nettside.html
+++ b/Kapittel 1-2/min-første-nettside.html
@@ -5,16 +5,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Min første nettside</title>
 </head>
 
 <body>
-	<a href="http://www.pinnsvinhjelpen.no/">
-		<img src="bilder/pinnsvin.jpg">
-		<h1>Pinnsvin</h1>
-	</a>
-
-	<p>På pinnsvinhjelpen.no finner du informasjon om pinnsvin.</p>
+	<h1>Min overskrift</h1>
+	<p>Dette er et avsnitt på min første nettside</p>
 </body>
 
 </html>
