--- a/Kapittel 1-2/skjema.html
+++ b/Kapittel 1-2/skjema.html
@@ -9,9 +9,22 @@
 <body>
 	<form action="registrering.html" >
 		<label for="">Navn</label>
-		<input type="text" name="navn" required><br>
+		<input type="text" name="navn" required placeholder="Skriv navn..."><br>
 		<label for="">Alder</label>
-		<input type="number" name="alder" required><br>
+		<input type="number" name="alder" required placeholder="Skriv alder..."><br>
+		Farge <br>
+		<input type="radio" name="farge" value="rød" id="RBrød" checked>
+		<label for="RBrød">Rød</label><br>
+		<input type="radio" name="farge" value="grønn" id="RBgrønn">
+		<label for="RBgrønn">Grønn</label><br>
+		<input type="radio" name="farge" value="blå" id="RBblå">
+		<label for="RBblå">Blå</label><br>
+
+		Brus <br>
+		<input type="checkbox" id="CBcola" name="cola"><label for="CBcola">Cola</label><br>
+		<input type="checkbox" id="CBsprite" name="sprite"><label for="CBsprite">Sprite</label><br>
+		<input type="checkbox" id="CBfanta" name="fanta"><label for="CBfanta">Fanta</label><br>
+
 		<button>Registrer</button>
 	</form>
 </body>
