--- a/Kapittel 1-2/skjema.html
+++ b/Kapittel 1-2/skjema.html
@@ -13,18 +13,25 @@
 		<label for="">Alder</label>
 		<input type="number" name="alder" required placeholder="Skriv alder..."><br>
 		Farge <br>
-		<input type="radio" name="farge" value="rød" id="RBrød" checked>
-		<label for="RBrød">Rød</label><br>
-		<input type="radio" name="farge" value="grønn" id="RBgrønn">
-		<label for="RBgrønn">Grønn</label><br>
-		<input type="radio" name="farge" value="blå" id="RBblå">
-		<label for="RBblå">Blå</label><br>
+		<input type="radio" name="farge" value="rød" id="rb-rød" checked>
+		<label for="rb-rød">Rød</label><br>
+		<input type="radio" name="farge" value="grønn" id="rb-grønn">
+		<label for="rb-grønn">Grønn</label><br>
+		<input type="radio" name="farge" value="blå" id="rb-blå">
+		<label for="rb-blå">Blå</label><br>
 
 		Brus <br>
-		<input type="checkbox" id="CBcola" name="cola"><label for="CBcola">Cola</label><br>
-		<input type="checkbox" id="CBsprite" name="sprite"><label for="CBsprite">Sprite</label><br>
-		<input type="checkbox" id="CBfanta" name="fanta"><label for="CBfanta">Fanta</label><br>
+		<input type="checkbox" id="cb-cola" name="cola"><label for="cb-cola">Cola</label><br>
+		<input type="checkbox" id="cb-sprite" name="sprite"><label for="cb-sprite">Sprite</label><br>
+		<input type="checkbox" id="cb-fanta" name="fanta"><label for="cb-fanta">Fanta</label><br>
 
+		<select name="spise" required>
+			<option value="">Hva ønsker du å spise</option>
+			<option value="pølse">Pølse</option>
+			<option value="salat">Salat</option>
+			<option value="pommes">Pommes</option>
+		</select>
+		<br>
 		<button>Registrer</button>
 	</form>
 </body>
