La til kommentar

--- a/Kapittel 1-2/skjema.html
+++ b/Kapittel 1-2/skjema.html
@@ -7,6 +7,7 @@
 	<title>Document</title>
 </head>
 <body>
+	<!-- Et skjema for å registrer en deltaker -->
 	<form action="registrering.html" >
 		<label for="">Navn</label>
 		<input type="text" name="navn" required placeholder="Skriv navn..."><br>
