--- a/Kapittel 1-2/skjema.html
+++ b/Kapittel 1-2/skjema.html
@@ -13,6 +13,10 @@
 		<input type="text" name="navn" required placeholder="Skriv navn..."><br>
 		<label for="">Alder</label>
 		<input type="number" name="alder" required placeholder="Skriv alder..."><br>
+		<label for="">Kort nr (4x4 tall)</label>
+		<input type="text"
+			   placeholder="XXXX XXXX XXXX XXXX"
+			   pattern="^[0-9]{4} [0-9]{4} [0-9]{4} [0-9]{4}$" required><br>
 		Farge <br>
 		<input type="radio" name="farge" value="rød" id="rb-rød" checked>
 		<label for="rb-rød">Rød</label><br>
