La til eksempler

--- a/Kapittel 1-2/marger-css.html
+++ b/Kapittel 1-2/marger-css.html
@@ -11,12 +11,12 @@
 
 
 <body>
-	<img style="" src="bilder/Blåveis.jpg">
-	<img style="" src="bilder/kattunge.jpg">
-	<img style="" src="bilder/kjemi.jpg">
-	<img style="" src="bilder/mat.jpg">
-	<img style="" src="bilder/fugl.jpg">
-	<img style="" src="bilder/blader.jpg">
+	<img style="width: 300px; height: 200px; margin: 15px; object-fit: cover;" src="bilder/Blåveis.jpg">
+	<img style="width: 300px; height: 200px; margin: 15px; object-fit: cover;" src="bilder/kattunge.jpg">
+	<img style="width: 300px; height: 200px; margin: 15px; object-fit: cover;" src="bilder/kjemi.jpg">
+	<img style="width: 300px; height: 200px; margin: 15px; object-fit: cover;" src="bilder/mat.jpg">
+	<img style="width: 300px; height: 200px; margin: 15px; object-fit: cover;" src="bilder/fugl.jpg">
+	<img style="width: 300px; height: 200px; margin: 15px; object-fit: cover;" src="bilder/blader.jpg">
 </body>
 
 </html>
