La til style eksempel

--- a/Kapittel 1-2/nora-helmer.html
+++ b/Kapittel 1-2/nora-helmer.html
@@ -3,11 +3,25 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Ibsen</title>
+	<style>
+		h2{
+			color: lightcyan;
+			background-color: purple;
+			padding: 20px;
+		}
+
+		p{
+			color: white;
+			background-color: steelblue;
+			padding: 20px;
+		}
+
+	</style>
 </head>
 <body>
-	<h1>HELMER:</h1>
+	<h2>HELMER:</h2>
 	<p>Du elsker meg ikke mer.</p>
-	<h1>NORA:</h1>
+	<h2>NORA:</h2>
 	<p>Nei, det er just tingen.</p>
 </body>
 
