--- a/Kapittel 1-2/marger-css-style-element.html
+++ b/Kapittel 1-2/marger-css-style-element.html
@@ -10,8 +10,12 @@
 		img {
 			width: 300px;
 			height: 200px;
-			margin: 15px;
 			object-fit: cover;
+			margin: 15px 30px 0 5px;
+			border: 5px solid black;
+			border-radius: 10px;
+			box-shadow: 15px 15px 15px black;
+			filter: sepia(60%);
 		}
 	</style>
 </head>
