--- a/Kapittel 1-2/nora-helmer.html
+++ b/Kapittel 1-2/nora-helmer.html
@@ -3,11 +3,23 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Ibsen</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Combo&display=swap" rel="stylesheet">
 	<style>
+
+		html{
+			font-size: 40pt;
+		}
+
 		h2{
 			color: lightcyan;
 			background-color: purple;
 			padding: 20px;
+			font-size: 3rem;
+			font-family: 'Combo', cursive;
+			text-shadow: 30px 20px 20px black;
+			text-align: center;
 		}
 
 		p{
