LA til flere eksempler

--- a/Kapittel 1-2/marger-css-style-element.html
+++ b/Kapittel 1-2/marger-css-style-element.html
@@ -16,6 +16,7 @@
 			border-radius: 10px;
 			box-shadow: 15px 15px 15px black;
 			filter: sepia(60%);
+			aspect-ratio: 1;
 		}
 	</style>
 </head>
