--- a/Kapittel 1-2/pseudoklasser.html
+++ b/Kapittel 1-2/pseudoklasser.html
@@ -6,16 +6,29 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Forfatter</title>
 	<style>
-		input[type=text]:focus {}
+		input[type=text]:focus {
+			background-color: aqua;
+		}
 
 		input[type=checkbox]:checked {
 		}
 
-		img:active {}
+		img{
+			border: white 3px solid;
+			transition: 0.5s;
+		}
 
-		a:hover {}
+		img:hover {
+			border: blue 3px solid;
+		}
 
-		li:nth-child(odd) {}
+		img:active {
+			border: red 3px solid;
+		}
+
+		li:nth-child(odd) {
+			background-color: aquamarine;
+		}
 	</style>
 </head>
 
