--- a/Kapittel 1-2/class-id-selektor.html
+++ b/Kapittel 1-2/class-id-selektor.html
@@ -9,15 +9,29 @@
 			border: 2px solid orange;
 		}
 
+		#hoved-bilde {
+			border-radius: 5px;
+			width: 150px;
+		}
+
+		.rundt-bilde {
+			width: 75px;
+			aspect-ratio: 1;
+			border-radius: 50%;
+		}
+
+		.større-kantlinje{
+			border-width: 5px;
+		}
 	</style>
 </head>
 
 <body>
 	<h1>Kjente byer</h1>
-	<img src="bilder/Pisa.jpg" id="hovedbilde">
-	<img src="bilder/Moskva.jpg" class="rundtBilde">
-	<img src="bilder/TelAviv.jpg" class="rundtBilde">
-	<img src="bilder/Paris.jpg" class="rundtBilde">
+	<img src="bilder/Pisa.jpg" id="hoved-bilde" class="større-kantlinje">
+	<img src="bilder/Moskva.jpg" class="rundt-bilde større-kantlinje">
+	<img src="bilder/TelAviv.jpg" class="rundt-bilde">
+	<img src="bilder/Paris.jpg" class="rundt-bilde">
 </body>
 
 </html>
