--- a/Kapittel 1-2/pseudoselektorer.html
+++ b/Kapittel 1-2/pseudoselektorer.html
@@ -3,7 +3,7 @@
 	<head>
 		<style>
 			p::first-letter {
-				font-size: 42px;
+				font-size: 3rem;
 			}
 			p::first-line {
 				color: darkorange;
@@ -18,6 +18,10 @@
 			}
 			q::after {
 				content: "»";
+			}
+
+			q{
+				font-style: italic;
 			}
 		</style>
 	</head>
