La ti leksempler og endret på dyrenett for å få til navbar

--- a/Kapittel 1-2/dyrenett/ekorn.html
+++ b/Kapittel 1-2/dyrenett/ekorn.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Dyrenett</title>
+    <meta charset="UTF-8">
+    <title>Dyrenett</title>
+    <style>
+        ul{
+
+        }
+
+        li{
+
+        }
+
+        a{
+
+        }
+
+        a:hover{
+
+        }
+    </style>
 </head>
+
 <body>
-	<a href="ekorn.html">Ekorn</a>
-    <a href="pinnsvin.html">Pinnsvin</a>
-    <a href="kanin.html">Kanin</a>
+    <ul>
+        <li><a href="ekorn.html">Ekorn</a></li>
+        <li><a href="pinnsvin.html">Pinnsvin</a></li>
+        <li><a href="kanin.html">Kanin</a></li>
+    </ul>
     <h1>Ekorn</h1>
     <img src="bilder/ekorn.jpg" alt="Bilde av en ekorn">
-    <p>En ekorn kan leve i 8-10 år.</p>
+    <p>En <a href="https://no.wikipedia.org/wiki/Ekorn">ekorn</a> kan leve i 8-10 år.</p>
 </body>
+
 </html>
