--- a/Kapittel 1-2/dyrenett/ekorn.html
+++ b/Kapittel 1-2/dyrenett/ekorn.html
@@ -4,30 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Dyrenett</title>
-    <style>
-        ul{
-
-        }
-
-        li{
-
-        }
-
-        a{
-
-        }
-
-        a:hover{
-
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <ul>
-        <li><a href="ekorn.html">Ekorn</a></li>
-        <li><a href="pinnsvin.html">Pinnsvin</a></li>
-        <li><a href="kanin.html">Kanin</a></li>
+        <li class="aktiv"><a href="ekorn.html">Ekorn</a></li><li><a href="pinnsvin.html">Pinnsvin</a></li><li><a href="kanin.html">Kanin</a></li>
     </ul>
     <h1>Ekorn</h1>
     <img src="bilder/ekorn.jpg" alt="Bilde av en ekorn">
