--- a/Kapittel 1-2/dyrenett/kanin.html
+++ b/Kapittel 1-2/dyrenett/kanin.html
@@ -3,11 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Dyrenett</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<a href="ekorn.html">Ekorn</a>
-    <a href="pinnsvin.html">Pinnsvin</a>
-    <a href="kanin.html">Kanin</a>
+    <ul>
+        <li><a href="ekorn.html">Ekorn</a></li><li><a href="pinnsvin.html">Pinnsvin</a></li><li class="aktiv"><a href="kanin.html">Kanin</a></li>
+    </ul>
     <h1>Kanin</h1>
     <img src="bilder/kanin.jpg" alt="Bilde av en kanin">
     <p>En kanin kan leve i 8-10 år.</p>
