--- a/Kapittel 1-2/dyrenett/pinnsvin.html
+++ b/Kapittel 1-2/dyrenett/pinnsvin.html
@@ -3,11 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Dyrenett</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<a href="ekorn.html">Ekorn</a>
-    <a href="pinnsvin.html">Pinnsvin</a>
-    <a href="kanin.html">Kanin</a>
+    <ul>
+        <li><a href="ekorn.html">Ekorn</a></li><li class="aktiv"><a href="pinnsvin.html">Pinnsvin</a></li><li><a href="kanin.html">Kanin</a></li>
+    </ul>
     <h1>Pinnsvin</h1>
 
     <img src="bilder/pinnsvin.jpg" alt="Bilde av et pinnsvin">
