--- a/Kapittel 1-2/tabell-css.html
+++ b/Kapittel 1-2/tabell-css.html
@@ -8,7 +8,21 @@
 	<title>Document</title>
 
 	<style>
+		table{
+			border-collapse: collapse;
+		}
 
+		td, th{
+			border: black 1px solid;
+		}
+
+		thead tr{
+			background-color: aquamarine;
+		}
+
+		tbody tr:nth-child(odd) {
+			background-color:blanchedalmond;
+		}
 
 	</style>
 </head>
