--- a/Kapittel 1-2/ul-ol-li-selektorer.html
+++ b/Kapittel 1-2/ul-ol-li-selektorer.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<style>
-		li {
+		ul > li {
 			color: plum;
 		}
 	</style>
@@ -15,6 +15,10 @@
 	<ul>
 		<li>Fargen endres</li>
 		<li>Men kun i punktlisten</li>
+		<ol>
+			<li>Fargen endres ikke</li>
+			<li>I den nummerert listen</li>
+		</ol>
 	</ul>
 	<ol>
 		<li>Fargen endres ikke</li>
