--- a/Kapittel 1-2/skjema-css.html
+++ b/Kapittel 1-2/skjema-css.html
@@ -8,7 +8,9 @@
 	<link rel="stylesheet" href="brukerinput.css">
 	<style>
 		body {
+			width: 50%;
 			font-family: Arial, Helvetica, sans-serif;
+			margin: 0 auto;
 		}
 	</style>
 	<title>Document</title>
