--- a/Kapittel 1-2/fet-kursiv.html
+++ b/Kapittel 1-2/fet-kursiv.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Min andre nettside</title>
+        <style>
+            body{
+                background-color: #000000;
+            }
+        </style>
     </head>
     <body>
         <h1>Klassetur</h1>
