--- a/Kapittel 3/element-med-font-strørrelse.html
+++ b/Kapittel 3/element-med-font-strørrelse.html
@@ -8,16 +8,16 @@
 	<title>Element med font størrelser</title>
 	<style>
 		html {
-			font-size: 16px;
+			font-size: 1em;
 		}
 
-		body{
+/*		body{
 			width: 100vw;
 			height: 100vh;
 			background-image: url("../Kapittel 1-2/bilder/vinter8.jpg");
 			background-size: cover;
 		}
-
+*/
 		main {
 			width: 30rem;
 			padding: 1rem;
