Eksempler fra timen

--- a/Kapittel 3/flex-grow.html
+++ b/Kapittel 3/flex-grow.html
@@ -19,13 +19,22 @@
 			padding: 1rem;
 		}
 
-		.ravi {}
+		.ravi {
+			flex-grow: 8;
 
-		.lisa {}
+		}
 
-		.linnea {}
+		.lisa {
+			flex-grow: 12;
+		}
 
-		.paul {}
+		.linnea {
+			flex-grow: 6;
+		}
+
+		.paul {
+			flex-grow: 4;
+		}
 	</style>
 
 </head>
