Eksempler fra timen

--- a/Kapittel 3/element-med-font-strørrelse.html
+++ b/Kapittel 3/element-med-font-strørrelse.html
@@ -11,13 +11,14 @@
 			font-size: 1em;
 		}
 
-/*		body{
+		body{
 			width: 100vw;
 			height: 100vh;
 			background-image: url("../Kapittel 1-2/bilder/vinter8.jpg");
 			background-size: cover;
+			background-position: center;
 		}
-*/
+
 		main {
 			width: 30rem;
 			padding: 1rem;
