--- a/Kapittel 3/flex-container.html
+++ b/Kapittel 3/flex-container.html
@@ -6,14 +6,25 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<style>
+		*{
+			box-sizing: border-box;
+		}
+
 		main{
+			display: flex;
+			flex-direction: row;
 			background-color: orange;
 			height: 200px;
+			gap: 10px;
+			justify-content: flex-start;
+			align-items:center;
 		}
 
 		article{
 			background-color: indigo;
 			color: white;
+			padding: 10px;
+			flex: 100px 1 0;
 		}
 
 	</style>
