LA til eksempler fra timen

--- a/Kapittel 3/flex-mote-side.html
+++ b/Kapittel 3/flex-mote-side.html
@@ -15,24 +15,32 @@
 		}
 
 		article {
+			background-size: cover;
+			background-position: center;
 			flex: 1;
 			padding: 1rem;
 			color: white;
 			font-size: 0.5rem;
-
+			display: flex;
+			flex-direction: column;
+			justify-content: flex-end;
+			transition: 0.5s;
 		}
 
-		article:hover {}
+		article:hover {
+			flex-grow: 3;
+			font-size: 1.0em;
+		}
 
-		.dress- {
+		.dress {
 			background-image: url("bilder/dress.jpg");
 		}
 
-		.sko- {
+		.sko {
 			background-image: url("bilder/sko.jpg");
 		}
 
-		.milano- {
+		.milano {
 			background-image: url("bilder/milano.jpg");
 		}
 	</style>
