--- a/Kapittel 3/flex-navbar.html
+++ b/Kapittel 3/flex-navbar.html
@@ -11,11 +11,15 @@
 		}
 
 		nav ul{
+			display: flex;
 			margin: 0;
+			padding: 0;
 			list-style: none;
 		}
 
 		nav li{
+			flex-grow: 1;
+			flex-basis: 100px;
 		}
 
 		nav a{
@@ -25,6 +29,10 @@
 			background-color: steelblue;
 			color: white;
 			width: 100%;
+			text-align: center;
+		}
+		nav a:hover{
+			background-color: blue;
 		}
 	</style>
 </head>
