La til eksempler fra timen

--- a/Kapittel 3/grid-minimum-høyde.html
+++ b/Kapittel 3/grid-minimum-høyde.html
@@ -6,6 +6,8 @@
         <style>
             section {
                 display: grid;
+				grid-template-columns: 300px;
+				grid-auto-rows: minmax(30px, auto);
 
             }
             article {
@@ -16,11 +18,8 @@
         </style>
     </head>
     <section>
-        <article>40 piksler høy</article>
-        <article>60 piksler høy</article>
-        <article>40 piksler høy</article>
-        <article>60 piksler høy</article>
-        <article>40 piksler høy</article>
-        <article>60 piksler høy</article>
+        <article>Her er det en del tekst. Men den får ikke plass i ruta.</article>
+        <article></article>
+        <article>Her er det en del tekst. Men den får ikke plass i ruta.</article>
     </section>
 </html>
