--- a/Kapittel 3/grid-tre-kolonner-to-rader.html
+++ b/Kapittel 3/grid-tre-kolonner-to-rader.html
@@ -5,6 +5,10 @@
         <title>Rutenett</title>
         <style>
             main {
+				display: grid;
+				grid-template-columns: 200px 180px 250px;
+				grid-template-rows: 150px 75px;
+				gap: 10px;
             }
             article {
                 background-color: lightcyan;
@@ -16,6 +20,12 @@
     <main>
         <article>200px bred</article>
         <article>180px bred<br>Denne ruta har mer innhold.</article>
+        <article>250px bred</article>
+        <article>200px bred</article>
+        <article>180px bred</article>
+        <article>250px bred</article>
+        <article>200px bred</article>
+        <article>180px bred</article>
         <article>250px bred</article>
         <article>200px bred</article>
         <article>180px bred</article>
