--- a/Kapittel 3/grid-auto-rows.html
+++ b/Kapittel 3/grid-auto-rows.html
@@ -7,6 +7,7 @@
             section {
                 display: grid;
                 grid-template-columns: 300px;
+				grid-auto-rows: 40px 60px;
             }
             article {
                 background-color: lightgreen;
@@ -16,6 +17,12 @@
         </style>
     </head>
     <section>
+        <article>40 piksler høy</article>
+        <article>60 piksler høy</article>
+        <article>40 piksler høy</article>
+        <article>60 piksler høy</article>
+        <article>40 piksler høy</article>
+        <article>60 piksler høy</article>
         <article>40 piksler høy</article>
         <article>60 piksler høy</article>
         <article>40 piksler høy</article>
