La til flere eksempler

--- a/Kapittel 3/grid-layout-med-grid.html
+++ b/Kapittel 3/grid-layout-med-grid.html
@@ -6,6 +6,8 @@
     </head>
     <style>
         main {
+            display: grid;
+            grid-template-columns: 200px 1fr;
             font-family: "Helvetica Neue", sans-serif;
             max-width: 800px;
             height: 400px;
