--- a/Kapittel 3/grid-nettavis.html
+++ b/Kapittel 3/grid-nettavis.html
@@ -30,17 +30,17 @@
 
             .nyheter img {
                 width: 100%;
-                /*height: 8em;
-                flex-grow: 1;*/
-                /*object-fit: cover;
-                object-position: center;*/
+                height: 8em;
+                flex-grow: 1;
+                object-fit: cover;
+                object-position: center;
             }
 
-            /*
+
             .tre-kolonner { grid-column: span 3; }
             .fire-kolonner { grid-column: span 4; }
             .seks-kolonner { grid-column: span 6; }
-            .to-rader { grid-row: span 2;}*/
+            .to-rader { grid-row: span 2;}
         </style>
     </head>
     <section class="nyheter">
