--- a/Kapittel 3/grid-tre-kolonner-to-rader.html
+++ b/Kapittel 3/grid-tre-kolonner-to-rader.html
@@ -7,7 +7,7 @@
             main {
 				display: grid;
 				grid-template-columns: 200px 180px 250px;
-				grid-template-rows: 150px 75px;
+				grid-auto-rows: 150px 75px;
 				gap: 10px;
             }
             article {
@@ -15,14 +15,22 @@
                 border: 1px solid gray;
                 padding: 10px;
             }
+
+            .to-kolonner{
+                grid-column: span 2;
+            }
+
+            .fire-kolonner{
+                grid-row: span 4;
+            }
         </style>
     </head>
     <main>
-        <article>200px bred</article>
+        <article class="to-kolonner">200px bred</article>
         <article>180px bred<br>Denne ruta har mer innhold.</article>
         <article>250px bred</article>
         <article>200px bred</article>
-        <article>180px bred</article>
+        <article class="fire-kolonner">180px bred</article>
         <article>250px bred</article>
         <article>200px bred</article>
         <article>180px bred</article>
