--- a/Kapittel 3/grid-template-columns-1fr.html
+++ b/Kapittel 3/grid-template-columns-1fr.html
@@ -8,8 +8,10 @@
 	<style>
 		main{
 			display: grid;
-			grid-template-columns: 1fr 2fr 1fr;
+			grid-template-columns: 200px 2fr 1fr;
 			gap: 1px;
+			max-width: 800px;
+			margin: 0 auto;
 		}
 
 		main div{
